syntax = "proto3";

package test;
option go_package="./;test";

option (gogoproto.sizer_all) = true;
option (gogoproto.marshaler_all) = true;
option (gogoproto.unmarshaler_all) = true;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

message Info {
    string name = 1 ;
    int32  age = 2;
}

service Greeter {
    rpc SayHello (HelloRequest) returns (HelloReply) {}
    rpc GetInfo (HelloRequest) returns (Info) {}
}

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}